--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@tauri-apps/api": "^1.4.0",
+    "@types/react-transition-group": "^4.4.7",
     "ahooks": "^3.7.8",
+    "b-validate": "^1.5.3",
     "classnames": "^2.3.2",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-transition-group": "^4.4.5",
+    "scroll-into-view-if-needed": "^3.1.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
