--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,8 @@ tauri = { version = "1.4", features = [ "clipboard-write-text", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rusqlite = "0.29.0"
+rand_pwd = "1.1.3"
+paspio = "1.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
