--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,11 +12,11 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "noImplicitAny": false,
+        // "noImplicitAny": false,
         "jsx": "react-jsx",
 
         /* Linting */
-        "strict": true,
+        "strict": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
