--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,13 +13,14 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "clipboard-write-text", "shell-open"] }
+tauri = { version = "1.4", features = [ "fs-all", "clipboard-write-text", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rusqlite = "0.29.0"
 rand_pwd = "1.1.3"
 paspio = "1.0.0"
 chrono = "0.4.31"
+dirs = "5.0.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
